--- a/env.example
+++ b/env.example
@@ -5,3 +5,4 @@ AWS_ACCESS_KEY_ID=your-aws-access-key-here
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key-here
 AWS_REGION=ap-northeast-2
 S3_BUCKET_NAME=your-bucket-name
+KAKAO_REST_API_KEY=your-kakao-rest-api-key
