--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.1",
     "ics": "^3.8.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
